fix z-index and add centering to nav

--- a/src/style/modules/section/section.navigation.scss
+++ b/src/style/modules/section/section.navigation.scss
@@ -7,6 +7,11 @@
       position: relative;
       display: flex;
 
+      &.center {
+        justify-content: center;
+        align-items: center;
+      }
+
       &.align-right {
         ul ul {
           right: 0;
